--- a/templates/front.html
+++ b/templates/front.html
@@ -12,7 +12,7 @@
 
 {% for entry in past_entries %}
     <div class="past-entries">
-        <div class="entry-title">{{entry.title}}</div>
+        <div class="entry-title"><a href="/blog/{{entry.key().id()}}">{{entry.title}}</a></div>
         <div class="entry-created">{{entry.created}}</div>
         <pre class="entry-body">{{entry.entry}}</pre>
     </div>
