Removed redundant front page text

--- a/templates/front.html
+++ b/templates/front.html
@@ -5,7 +5,7 @@
 <h1>Welcome to Build-a-Blog</h1>
 
 {% if past_entries %}
-    <h1>My Blog</h1>
+    pass
 {% else %}
     <h1>Get Started Blogging!</h1>
 {% endif %}
